--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -11,3 +11,13 @@ figure img{
   height: auto;
 }
 
+.index .content h1{
+  font-size: 4rem;
+  font-family: Roboto-Bold;
+}
+
+.index .content p{
+  font-size: 1rem;
+  font-family: IBM-Medium;
+}
+
