--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             <div class="col-12">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="">>_Catch your <br> Risk profile</a></li>
+                        <li><a href="">>_Catch your <br>Crime Profile</a></li>
                         <li><a href="">>_Data usage</a></li>
                         <li><a href="">>_About</a></li>
                     </ul>
@@ -58,32 +58,32 @@
                     <div class="row">
 
                         <!-- start column 1 -->
-                        <div class="col-5  justify-content-center align-self-center">
+                        <div class="col-1 ">
 
-                            <fieldset class="box-border">
-                                <legend class="box-border">>_INTRODUCTION</legend>
-                                <div class="content">
-                                    <p>
-                                        Catch your risk profile is a application that creates a risk profile based on
-                                        your facial features.
-                                        The risk profile will reveal how likely you will commit a particular crime based
-                                        on machine learning algorithms and historical crime data.
-                                        The tool is one example of a predictive policing tool what could potentially be
-                                        deployed by police in the near future by analyzing real-time surveillance
-                                        cameras in the public space.
-                                        <br><br>
-                                        NOTE:<br> By using the tool you automatically agree to the privacy policy.
-                                    </p>
-                                    <a class="cta" href="analyzer.html">catch your risk profile</a>
-                                </div>
-                            </fieldset>
+
 
                         </div>
                         <!-- end column 1 -->
 
                         <!-- start column 2 -->
-                        <div class="col-3">
+                        <div class="col-6 justify-content-center align-self-center">
+                            <!--<fieldset class="box-border">-->
+                                <!--<legend class="box-border">>_INTRODUCTION</legend>-->
+                                <div class="content">
+                                    <h1 class="m-0 p-0">CATCH YOUR<br>CRIME PROFILE</h1>
+                                    <p class="pb-4">
+                                        <!--Facial recognition  -->
 
+                                        Scan your face and see how your facial features are represented within the dutch crime data.
+                                        Your crime profile will be based on machine learning algorithms and historical crime data.
+
+                                        <!--How are your facial features represented within the dutch crime data?<br>-->
+                                        <!--This application reveals your position within the sociaty based on machine learning algorithms and historical crime data.-->
+                                        <!--Scan your face and get to know your position within the sociaty based on machine learning algorithms and historical crime data.-->
+                                    </p>
+                                    <a class="cta col-5 " href="analyzer.html">Scan your face</a>
+                                </div>
+                            <!--</fieldset>-->
                         </div>
                         <!-- end column 2 -->
 
@@ -94,6 +94,12 @@
                             </figure>
                         </div>
                         <!-- end column 3 -->
+
+                        <div class="col-1  ">
+
+
+
+                        </div>
 
                     </div>
                     <!-- end row -->
@@ -111,9 +117,9 @@
     <footer>
         <div id="bar">
             <ul id="progressbar">
-                <li class="active" id="step1"><a href="index.html">INTRODUCTION</a> </li>
-                <li id="step2"><a href="analyzer.html"> RISK PROFILE</a></li>
-                <li id="step3"><a href=""> Step 3</a></li>
+                <li class="active" id="step1"><a href="index.html">Introduction</a> </li>
+                <li class="" id="step2"><a href="analyzer.html"> Crime PROFILE</a></li>
+                <li id="step3"><a href=""> View similar faces</a></li>
                 <li id="step4"><a href=""> Step 4</a></li>
             </ul>
         </div>
@@ -136,6 +142,8 @@
 
 <!-- project script -->
 <script async src="js/app.js"></script>
+
+<script async src="js/dataset.js"></script>
 
 
 </html>
