--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -26,6 +26,19 @@
   src: url('../../fonts/Ibm-3270-Medium.ttf');
 }
 
+@font-face {
+  font-family: 'Roboto-Bold';
+  src: url('../../fonts/Roboto-Bold.ttf')
+}
 
+@font-face {
+  font-family: 'Roboto-Regular';
+  src: url('../../fonts/Roboto-Regular.ttf')
+}
+
+@font-face {
+  font-family: 'Roboto-Thin';
+  src: url('../../fonts/Roboto-Thin.ttf')
+}
 
 
