--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible">
-  <title>Risk Profile</title>
+  <title>Catch Your Crime Profile</title>
 
 
   <!-- bootstrap 5 -->
@@ -21,6 +21,9 @@
   <!-- load kairos api -->
   <script src="js/kairos.js"></script>
 
+
+
+
 </head>
 
 
@@ -35,7 +38,7 @@
           <div class="col-12">
             <nav>
               <ul class="navigation">
-                <li><a href="">>_Catch your <br> Risk profile</a></li>
+                <li><a href="">>_Catch your <br>Crime Profile</a></li>
                 <li><a href="">>_Data usage</a></li>
                 <li><a href="">>_About</a></li>
               </ul>
@@ -135,11 +138,33 @@
             <div class="col-4">
 
               <fieldset class="box-border">
-                <legend class="box-border">>_Risk profile</legend>
+                <legend class="box-border">>_Crime profile</legend>
+
                 <div class="content chart">
-                  <canvas id="myChart" width="400" height="400"></canvas>
-                  <a class="cta" href="">EXPLORE PROFILE ON MAP</a>
+                  <p>
+                    <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan-->
+                    <!--<span class="risk-percentage">&#45;&#45;%</span> van de <span class="gender-category">...</span>-->
+                    <!--tussen de  <span class="age-category">... jaar</span> met een-->
+                    <!--<span class="ethnicity-category">...</span> in Nederland-->
+                    <!--is aangehouden voor het plegen van een <span class="crime-category">...</span>.-->
+
+
+                    Based on the facial features, this face represents a group of
+                    <span class="gender-category">...</span>
+                    between the ages of <span class="age-category">...</span>
+                    with a <span class="ethnicity-category">...</span>
+                    where <span class="risk-percentage">&#45;&#45;%</span>
+                    have been arrested for committing <span class="crime-category">...</span> in The Netherlands.
+
+
+
+                    <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan tussen 2014 en 2015 <span class="risk-percentage">46%</span> een <span class="crime-category">vermogensmisdrijf</span> heeft gepleegd.-->
+                  </p>
+                  <!--<div id="my_dataviz"></div>-->
+                  <canvas id="myChart" class="pb-3" width="400" height="350"></canvas>
+                  <a class="cta" href="">View similar faces</a>
                 </div>
+
               </fieldset>
 
             </div>
@@ -151,15 +176,15 @@
         </div>
         <!-- End container -->
 
-        <div class="container utility">
-          <div class="col-2">
-            <table>
-              <tr><td>Session</td><td>:</td><td><span class="session">UNI43535</span></td></tr>
-              <tr><td>User id</td><td>:</td><td><span class="user_id">#2023032</span> </td></tr>
-              <tr><td>Duration</td><td>:</td><td><span class="duration">00:2:34</span></td></tr>
-            </table>
-          </div>
-        </div>
+        <!--<div class="container utility">-->
+          <!--<div class="col-2">-->
+            <!--<table>-->
+              <!--<tr><td>Session</td><td>:</td><td><span class="session">UNI43535</span></td></tr>-->
+              <!--<tr><td>User id</td><td>:</td><td><span class="user_id">#2023032</span> </td></tr>-->
+              <!--<tr><td>Duration</td><td>:</td><td><span class="duration">00:2:34</span></td></tr>-->
+            <!--</table>-->
+          <!--</div>-->
+        <!--</div>-->
 
 
       </section>
@@ -175,9 +200,9 @@
     <footer>
       <div id="bar">
         <ul id="progressbar">
-          <li class="active" id="step1"><a href="index.html">INTRODUCTION</a> </li>
-          <li class="active" id="step2"><a href="analyzer.html"> RISK PROFILE</a></li>
-          <li id="step3"><a href=""> Map view</a></li>
+          <li class="active" id="step1"><a href="index.html">Introduction</a> </li>
+          <li class="active current" id="step2"><a href="analyzer.html"> Crime PROFILE</a></li>
+          <li id="step3"><a href=""> View similar faces</a></li>
           <li id="step4"><a href=""> Step 4</a></li>
         </ul>
       </div>
@@ -206,6 +231,13 @@
 <!-- chartjs -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 <script src="js/chart.js"></script>
+<!--<script src="https://d3js.org/d3.v6.min.js"></script>-->
+<!--<script src="js/d3.js"></script>-->
 
+<script>
+
+
+
+</script>
 
 </html>
