--- a/scss/pages/_analyzer.scss
+++ b/scss/pages/_analyzer.scss
@@ -66,16 +66,17 @@ table .bar{
 
 
 #my_camera canvas{
-  position: relative;
+  position: absolute;
+  left: 0;
   z-index: 1;
   width: auto!important;
 }
 
 
 video{
-  position: absolute;
+  position: relative;
   z-index: 0;
-  margin-top: 0.5rem;
+  //padding-top: .6rem;
   -webkit-filter: grayscale(1);
   filter: grayscale(100%);
 }
@@ -103,6 +104,7 @@ video .red_dot{
 {
   color:$yellow;
 }
+
 
 
 fieldset .content p{
