--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -23,7 +23,6 @@
 
 
 
-
 </head>
 
 
@@ -239,10 +238,8 @@
 <!--<script src="https://d3js.org/d3.v6.min.js"></script>-->
 <!--<script src="js/d3.js"></script>-->
 
-<script>
+<script src="https://mugshots-fb45.restdb.io/rest/_jsapi.js"></script>
 
-
-
-</script>
+<script src="js/db.js"></script>
 
 </html>
