--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -86,3 +86,28 @@ legend{
   font-family: Dejavu-Regular;
   cursor: pointer;
 }
+
+
+.loader{
+  height: auto;
+  width: 60%;
+  position: relative;
+  margin: auto;
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  text-align: center;
+}
+
+.loader p{
+  display: block;
+  padding-top:0rem;
+}
+
+.loader img {
+  height: auto;
+  width: 100%;
+}
+
+.not-visible{
+  display: none;
+}
