--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'pages/index';
 @import 'pages/analyzer';
 @import 'pages/faces';
-@import 'pages/resources';
+@import 'pages/about';
+@import 'pages/data';
 
 
