--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -18,12 +18,12 @@ body {
 }
 
 main{
-  padding-bottom: 10rem;
+  //padding-bottom: 10rem;
 }
 
 table{
   table-layout: fixed ;
-  width: 100%;
+  width: 95%;
   font-family: Dejavu-Regular;
   font-size: 0.65rem;
   text-transform: uppercase;
@@ -72,6 +72,35 @@ legend{
   padding-bottom: .5rem;
 }
 
+.close-box{
+  height: auto;
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.close{
+  position: absolute;
+  height: 1rem;
+  width: 2rem;
+  font-size:   0.8rem;
+  line-height: 2rem;
+  color: #fff;
+  text-align: center;
+  border:1px solid $white;
+  font-family: Dejavu-Regular;
+  cursor: pointer;
+  right: -18px;
+  margin-top:-0.5rem;
+  padding-bottom: 1rem;
+
+}
+
+.close:hover{
+  border:1px solid $white_white;
+}
+
+
 .helper{
   position: absolute;
   height: 1rem;
@@ -90,7 +119,7 @@ legend{
 
 .loader{
   height: auto;
-  width: 60%;
+  width: 20%;
   position: relative;
   margin: auto;
   padding-top: 0rem;
@@ -110,4 +139,48 @@ legend{
 
 .not-visible{
   display: none;
+}
+
+.disabled{
+  pointer-events: none;
+  opacity: 0.2;
+}
+
+
+.overlay{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 10;
+}
+
+.notification{
+  height: 100%;
+  width: 100%;
+}
+
+.notification-content{
+  width: 35%;
+}
+
+.notification-content .content{
+  width: 95%;
+}
+
+
+.page-loader .loader{
+  width: 40%;
+}
+
+.page-loader{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,1);
+  z-index: 12;
+}
+
+.page-loader p{
+  font-family: IBM-Medium;
 }
