--- a/views/faq.html
+++ b/views/faq.html
@@ -34,7 +34,6 @@
     </div>
 </div>
 
-
 <main data-barba="container" data-barba-namespace="index" data-title="Intro">
 
 <div class="container">
@@ -58,7 +57,7 @@
 
 
 
-        <article class="index page">
+        <article class="data page">
             <section class="index__section">
                 <!-- start container -->
                 <div class="container d-flex">
@@ -66,20 +65,13 @@
                     <!-- start row -->
                     <div class="row">
 
-                        <!-- start column 1 -->
-                        <div class="col-1 ">
-
-
-
-                        </div>
-                        <!-- end column 1 -->
 
                         <!-- start column 2 -->
-                        <div class="col-6 justify-content-center align-self-center">
+                        <div class="col-6">
                             <!--<fieldset class="box-border">-->
                                 <!--<legend class="box-border">>_INTRODUCTION</legend>-->
                                 <div class="content">
-                                    <h1 class="m-0 p-0">CATCH YOUR<br>CRIME PROFILE</h1>
+                                    <h1>>_Data usage</h1>
                                     <p class="pb-4">
                                         <!--Facial recognition  -->
 
@@ -90,25 +82,12 @@
                                         <!--This application reveals your position within the sociaty based on machine learning algorithms and historical crime data.-->
                                         <!--Scan your face and get to know your position within the sociaty based on machine learning algorithms and historical crime data.-->
                                     </p>
-                                    <a class="cta col-5 " href="analyzer.html">Scan your face</a>
+
                                 </div>
                             <!--</fieldset>-->
                         </div>
                         <!-- end column 2 -->
 
-                        <!-- start column 3 -->
-                        <div class="col-4  justify-content-center align-self-center">
-                            <figure class="pt-5">
-                                <img src="/img/Moshed_face.gif" alt="gif">
-                            </figure>
-                        </div>
-                        <!-- end column 3 -->
-
-                        <div class="col-1  ">
-
-
-
-                        </div>
 
                     </div>
                     <!-- end row -->
@@ -126,10 +105,10 @@
     <footer>
         <div id="bar">
             <ul id="progressbar">
-                <li class="active current" id="step1"><a href="/">Introduction</a> </li>
-                <li class="" id="step2"><a href="/analyzer.html"> Crime PROFILE</a></li>
-                <li class="" id="step3"><a href="/faces.html"> View similar faces</a></li>
-                <li class="" id="step4"><a href="/data.html"> Data usage</a></li>
+                <li class="active" id="step1"><a href="/">Introduction</a> </li>
+                <li class="active" id="step2"><a href="analyzer.html"> Crime PROFILE</a></li>
+                <li class="active" id="step3"><a href="faces.html"> View similar faces</a></li>
+                <li class="active current" id="step4"><a href="/data.html"> Data usage</a></li>
         </div>
     </footer>
 </footer>
